// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Current User Store should return expected menu routes for a student 1`] = `
Array [
  Object {
    "label": "My Courses",
    "name": "myCourses",
    "options": Object {
      "separator": "after",
    },
  },
  Object {
    "label": "Dashboard",
    "name": "dashboard",
    "options": Object {},
    "params": Object {
      "courseId": 2,
    },
  },
  Object {
    "label": "Browse the Book",
    "name": "browseBook",
    "options": Object {},
    "params": Object {
      "courseId": 2,
    },
  },
  Object {
    "label": "Scores",
    "name": "viewGradebook",
    "options": Object {},
    "params": Object {
      "courseId": 2,
    },
  },
  Object {
    "label": "Performance Forecast",
    "name": "viewPerformanceGuide",
    "options": Object {},
    "params": Object {
      "courseId": 2,
    },
  },
  Object {
    "label": "Change Student ID",
    "name": "changeStudentId",
    "options": Object {},
    "params": Object {
      "courseId": 2,
    },
  },
  Object {
    "label": "Create a Course",
    "name": "createNewCourse",
    "options": Object {
      "separator": "both",
    },
    "params": Object {
      "courseId": 2,
    },
  },
]
`;

exports[`Current User Store should return expected menu routes for a teacher 1`] = `
Array [
  Object {
    "label": "My Courses",
    "name": "myCourses",
    "options": Object {
      "separator": "after",
    },
  },
  Object {
    "label": "Dashboard",
    "name": "dashboard",
    "options": Object {},
    "params": Object {
      "courseId": 1,
    },
  },
  Object {
    "label": "Browse the Book",
    "name": "browseBook",
    "options": Object {},
    "params": Object {
      "courseId": 1,
    },
  },
  Object {
    "label": "Performance Forecast",
    "name": "viewPerformanceGuide",
    "options": Object {},
    "params": Object {
      "courseId": 1,
    },
  },
  Object {
    "label": "Question Library",
    "name": "viewQuestionsLibrary",
    "options": Object {},
    "params": Object {
      "courseId": 1,
    },
  },
  Object {
    "label": "Gradebook",
    "name": "viewGradebook",
    "options": Object {},
    "params": Object {
      "courseId": 1,
    },
  },
  Object {
    "label": "Course Settings",
    "name": "courseSettings",
    "options": Object {},
    "params": Object {
      "courseId": 1,
    },
  },
  Object {
    "label": "Course Roster",
    "name": "courseRoster",
    "options": Object {},
    "params": Object {
      "courseId": 1,
    },
  },
  Object {
    "label": "Create a Course",
    "name": "createNewCourse",
    "options": Object {
      "separator": "both",
    },
    "params": Object {
      "courseId": 1,
    },
  },
  Object {
    "label": "Copy this Course",
    "name": "createNewCourse",
    "options": Object {
      "key": "cloneCourse",
      "separator": "after",
    },
    "params": Object {
      "sourceId": 1,
    },
  },
]
`;

exports[`Current User Store should return expected menu routes when course is missing 1`] = `
Array [
  Object {
    "label": "Create a Course",
    "name": "createNewCourse",
    "options": Object {
      "separator": "both",
    },
  },
]
`;
